fix accordion buttons (left-aligned)

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -142,6 +142,9 @@ background: var(--light);
   background: var(--med-dark);
   color: var(--light);
   border: var(--dark);
+}
+
+#form-btn {
   margin:0 auto;
   display:block;
   margin-top: 16px;
@@ -298,31 +301,6 @@ M E D I A  Q U E R I E S
 h1 {font-size: 30px;
 text-align: center;
 }
-
-/*
-::::::::::::::::::::::::::::::::::::::::::::::::::::
-Bootstrap 4 breakpoints
-*/
-/* Small devices (landscape phones, 544px and up) */
-@media (min-width: 544px) {
-    h1 {font-size: 30px;}
-  }
-
-  /* Medium devices (tablets, 768px and up) */
-  @media (min-width: 768px) {
-    h1 {font-size: 36px;}
-  }
-
-  /* Large devices (desktops, 992px and up) */
-  @media (min-width: 992px) {
-    h1 {font-size: 48px;}
-
-  /* Extra large devices (large desktops, 1200px and up) */
-  @media (min-width: 1200px) {
-    h1 {font-size: 56px;}
-  }
-
-
 
 
 h2 {font-size: 20px;}
